plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.9.20'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.woowacourse-projects:mission-utils:1.1.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

test {
    useJUnitPlatform()
}
